# simple_pytorch_trainer

./: LICENSE  pyproject.toml  trainer.py
loggers/: Loggers.py  Printlogger.py
src/spt/: trainer.py
src/spt/CheckPoint/: BaseCheckPoint.py
src/spt/Scheduler/: __init__.py  custom.py  scheduler.py
src/spt/loggers/: Loggers.py
